--- a/index.html
+++ b/index.html
@@ -36,28 +36,31 @@
 
 
 
-    <div style="  border: 4px dashed  #45526c  ;  background-image: linear-gradient(to bottom right, #f8f5f1 ,#f8a488, #903749);
+    <!--<div style="  border: 4px dashed  #45526c  ;  background-image: linear-gradient(to bottom right, #f8f5f1 ,#f8a488, #903749);
      ;margin-top: 50px;border-radius:20px;  box-shadow: 15px 15px #f3c5b5;">
 
         <ol id="results-list"> </ol>
         <center> <button id="button">View Results</button> </center>
-    </div>
-    </main>
+    </div>-->
+   
 
+
+       <div>
+        <canvas id="myChart"></canvas>
+       </div>
+
+
+ </main>
     <footer>
         <p>
             All Right Reserve 2021 &copy; Zienab Alawneh
         </p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script src="./js/app.js"></script>
 </body>
-
-
-
-
-
 
 
 </html>
